# Jlang

./: .cspell.json  @  CMakeLists.txt  README.md  cspell.json  sample.j
samples/: control_flow.j  loop_unroll.j  sample.j  simple.j  struct_features.j  structs.j  types.j
src/: Main.cpp
src/AST/: Ast.cpp  Ast.h
src/AST/Expressions/: Expressions.h
src/AST/Statements/: Statements.h
src/AST/TopLevelDecl/: TopLevelDecl.h
src/CodeGen/: AstVisitor.h  CodeGen.cpp  CodeGen.h
src/Common/: Assert.h  Logger.h
src/Enums/: NodeTypes.h  TokenTypes.h
src/JIT/: Jit.cpp  Jit.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Parser/: Parser.cpp  Parser.h
src/Scanner/: Scanner.cpp  Scanner.h
src/Types/: Token.h
test/: CMakeLists.txt
test/Lexer/: LexerTests.cpp
test/Scanner/: ScannerTests.cpp
